--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "aed6aae4",
+   "id": "fe347004",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d3e53ed8",
+   "id": "45dfc69e",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4caa3988",
+   "id": "6fa7394a",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "886da57c",
+   "id": "e34725db",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c4c9212c",
+   "id": "687b2cd0",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e19b1f6e",
+   "id": "ed061ff3",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "31170563",
+   "id": "d61893ca",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b8d8c979",
+   "id": "e34b187a",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "56f4c0a2",
+   "id": "01f68bfd",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e9f19693",
+   "id": "17886ffa",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b340e59",
+   "id": "8a8aad09",
    "metadata": {},
    "outputs": [
     {
@@ -245,15 +245,16 @@
     "name= input(\"Enter your name: \")\n",
     "company= input(\"Enter the name of the Company: \")\n",
     "\n",
-    "if name == company:\n",
+    "if name == \"Fatos\" and company= \"Cisco\":\n",
     "    print(\"you are me\")\n",
-    "ifel"
+    "elif name== \"Fatos\" or company== \"Cisco\":\n",
+    "    if name==\"Fatos\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c747176a",
+   "id": "f9f9e340",
    "metadata": {},
    "outputs": [],
    "source": []
