--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,13 +310,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cca586f",
+   "id": "4b73e156",
    "metadata": {},
    "outputs": [],
    "source": [
     "name = input('Enter user name: ')\n",
     "company = input('Enter company name: ')\n",
-    "if name == "
+    "if name == Jaspreet and company == Cisco:\n",
+    "    print(f' You're me!')\n",
+    "        "
    ]
   }
  ],
