--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "371a279d",
+   "id": "f260ca71",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a8716a75",
+   "id": "6c6f400e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9285ee21",
+   "id": "0e77317d",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3fe94208",
+   "id": "25d52a89",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c226cbc0",
+   "id": "d774dacd",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "703957b3",
+   "id": "45b15692",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "daeee0e6",
+   "id": "379ec55f",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "92a8fbb1",
+   "id": "9617d2e1",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cc7df21c",
+   "id": "2666a1a0",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "38dae734",
+   "id": "1914afa8",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bb7cacc0",
+   "id": "3847023c",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ac2a4c06",
+   "id": "b291fe21",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5307438a",
+   "id": "d0545939",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "32fd9046",
+   "id": "de885b2c",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b17f2f45",
+   "id": "6dd6d77e",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0e4d419f",
+   "id": "71e5d577",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "415b5972",
+   "id": "70aa46d9",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "19933e96",
+   "id": "2d328054",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "a53cff10",
+   "id": "72aa72d8",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "21719aad",
+   "id": "5cd60435",
    "metadata": {},
    "outputs": [
     {
@@ -414,19 +414,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "888f4aad",
+   "id": "3325c08d",
    "metadata": {},
    "outputs": [],
    "source": [
     "name = input('What is your name? ')\n",
     "company = input('What company do you work for? ')\n",
-    "if name=='Sara':\n",
-    "    print(f 'Hi, {Sara}')\n",
-    "elif company=='Cisco': \n",
-    "    print('Hi, we are collegues!)\n",
+    "if name=='Sara'or name=='sara':\n",
+    "    print('Hi, Sara')\n",
+    "elif company=='Cisco'or name=='cisco': \n",
+    "    print('Hi, we are collegue!')\n",
     "else:\n",
-    "    print(f'Oh, you?')"
+    "    print('Oh, you?!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6102cd8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
