--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "812d56d1",
+   "id": "9252898c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a4c53cd6",
+   "id": "ac87250c",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bbd1a141",
+   "id": "606ce9bc",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9cc3afe0",
+   "id": "f0e75bf1",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e9faa467",
+   "id": "b968b63a",
    "metadata": {},
    "outputs": [
     {
@@ -112,15 +112,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76e639ff",
+   "id": "86d88f7e",
    "metadata": {},
    "outputs": [],
    "source": [
     "name= input ('Enter a name: ')\n",
     "Company= input ('Enter a company name: ')\n",
-    "if name==ahmed and company==cisco :\n",
+    "if name== ahmed and company== cisco :\n",
     "    print('you're me!)\n",
-    "elif name == name2:\n",
+    "elif name == ahmed and company=! cisco:\n",
     "    print ('duplicate words, check again')\n",
     "else: \n",
     "    print (f'{name1} comes first')"
