--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -117,15 +117,18 @@
     "# test of the \"if\" functionality\n",
     "name = input('Enter your name: ')\n",
     "company = input('Enter your company: ')\n",
-    "if name == Dima and company == cisco\n",
-    "    print ('You are me!')\n",
-    "elif name == Dima and company "
+    "if name == Dima and company == cisco:\n",
+    "    print('You are me!')\n",
+    "elif name == Dima and company != cisco:\n",
+    "    print(f'Hello {name} from {company}')\n",
+    "elif name != Dima and company != cisco\n",
+    "    print()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba289605",
+   "id": "621a4c2c",
    "metadata": {},
    "outputs": [],
    "source": []
