--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fb3bb4d",
+   "id": "8a5582f2",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f7b16297",
+   "id": "03be5516",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f35df284",
+   "id": "6fb5e259",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5f7ff413",
+   "id": "6dd7ef38",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c7111880",
+   "id": "91dafdfa",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "0960f81b",
+   "id": "b3db81f1",
    "metadata": {
     "scrolled": true
    },
@@ -190,25 +190,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6ec00403",
+   "execution_count": 41,
+   "id": "ca064bab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (2882288544.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[41], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    if company != 'Cisco'\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+     ]
+    }
+   ],
    "source": [
     "name= input('what is your name: ')\n",
     "company=input('Where do you work: ')\n",
     "if name == 'Asma' and company == 'Cisco':\n",
     "    print('You are me!')\n",
     "elif name == 'Asma':\n",
-    "    if company != 'Cisco'\n",
+    "    if company != 'Cisco':\n",
     "    print('Nice name!')\n",
-    "elif"
+    "elif company == 'Cisco':\n",
+    "    if name != 'Asma':\n",
+    "        print('Hello there!')\n",
+    "    else:\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d4a2374",
+   "id": "68f69744",
    "metadata": {},
    "outputs": [],
    "source": []
