--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "45980d1f",
+   "id": "a421f955",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c0fb24c0",
+   "id": "e890c262",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80a0c380",
+   "id": "0e14c676",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "086b8f96",
+   "id": "6d2dad9b",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c2203fef",
+   "id": "06fc021e",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "81ae6dec",
+   "id": "539c274f",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "70220a53",
+   "id": "9d04aa80",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "135aeee3",
+   "id": "56dd3244",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d0d33205",
+   "id": "1484caa4",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "03714ac1",
+   "id": "d23f3f7f",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9841b29a",
+   "id": "319ba016",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3be04f3e",
+   "id": "5adc63c3",
    "metadata": {},
    "outputs": [
     {
@@ -247,8 +247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "ee0b8bc5",
+   "execution_count": 35,
+   "id": "0ff6f103",
    "metadata": {},
    "outputs": [
     {
@@ -262,20 +262,21 @@
     }
    ],
    "source": [
-    "myn = \"Matt\"\n",
-    "m\n",
+    "myn = 'Matt'\n",
+    "myc = 'Cisco'\n",
     "name = input('Enter your name')\n",
     "com = input('Enter your comany name')\n",
     "\n",
-    "if name=='Matt' and com=='Cisco':\n",
+    "if name==myn and com==myc:\n",
     "    print('You\\'re me!')\n",
-    "elif if"
+    "elif name=myn:\n",
+    "    print('What a nice name')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5328b73",
+   "id": "0b876870",
    "metadata": {},
    "outputs": [],
    "source": []
