--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b0bd5335",
+   "id": "aaea2a95",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fa72bc18",
+   "id": "ef81302c",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "68d110f0",
+   "id": "2f1495f5",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "29e0ce3a",
+   "id": "cf0dbcc5",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d36312be",
+   "id": "940cb9d1",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6e7371e8",
+   "id": "cb6939fd",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "37209949",
+   "id": "61e27cd2",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "019a1091",
+   "id": "24e5b3c9",
    "metadata": {},
    "outputs": [
     {
@@ -177,25 +177,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "d317067c",
+   "execution_count": null,
+   "id": "c9716a6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d0b35fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "1f99ee83",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter a name: joe\n",
-      "Please enter your company: cisco\n",
-      "You aint cool\n"
+      "Please enter a name: Joe\n",
+      "Please enter your company: Cisco\n",
+      "Hey it's me!\n"
      ]
     }
    ],
    "source": [
     "name = input(\"Please enter a name: \")\n",
     "company = input(\"Please enter your company: \")\n",
-    "\n",
-    "if name.lower == \"Joe\" and company == \"Cisco\":\n",
+    "namecheck= \n",
+    "if name == \"Joe\" and company == \"Cisco\":\n",
     "    print(\"Hey it's me!\")\n",
     "elif name == \"Joe\" and company != \"Cisco\":\n",
     "    print(\"Nice name!\")\n",
@@ -208,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d9cb60b",
+   "id": "5ab06af2",
    "metadata": {},
    "outputs": [],
    "source": []
