--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3a9f3ce7",
+   "id": "0f5f6777",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9687ad67",
+   "id": "4dd02235",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1dce43a0",
+   "id": "8f9c3fe1",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13696cb0",
+   "id": "e1553df8",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "02ad9722",
+   "id": "fba55c46",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4e2b2347",
+   "id": "b72ec01d",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "76682391",
+   "id": "da648665",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e5ab33c",
+   "id": "88d33f58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,13 +149,14 @@
     "    print(\"you haven't provided your company !!\")\n",
     "elif name == 'Przem' and company == 'Cisco' :\n",
     "    print(\"you claim to be me :)  !!\")\n",
-    "elif "
+    "elif name == 'Przem' and company != 'Cisco' :    # to and jest chyba niepotrzebne\n",
+    "    print(f\"Welcome {n} !!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74329c6d",
+   "id": "ab50cdd2",
    "metadata": {},
    "outputs": [],
    "source": []
