--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fe347004",
+   "id": "06d50ecd",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "45dfc69e",
+   "id": "1bb282b8",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6fa7394a",
+   "id": "02d349d9",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e34725db",
+   "id": "92dd69dc",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "687b2cd0",
+   "id": "d7aa6d7c",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ed061ff3",
+   "id": "ecd32e3b",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d61893ca",
+   "id": "26f7ec1e",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "e34b187a",
+   "id": "cfe69563",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "01f68bfd",
+   "id": "4eb7b3bd",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "17886ffa",
+   "id": "98ee6086",
    "metadata": {},
    "outputs": [
     {
@@ -229,15 +229,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8a8aad09",
+   "execution_count": 48,
+   "id": "93ae1066",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter your name: \n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3539856187.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[48], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    if name == \"Fatos\" and company= \"Cisco\":\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -248,13 +249,18 @@
     "if name == \"Fatos\" and company= \"Cisco\":\n",
     "    print(\"you are me\")\n",
     "elif name== \"Fatos\" or company== \"Cisco\":\n",
-    "    if name==\"Fatos\""
+    "    if name==\"Fatos\":\n",
+    "        print(\"you have a nice name\")\n",
+    "    else\n",
+    "        print(f\"Hi {name}, have a nice day\")\n",
+    "else\n",
+    "    print(f\"Get out of the building {name}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9f9e340",
+   "id": "59a8dd33",
    "metadata": {},
    "outputs": [],
    "source": []
