--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b73e156",
+   "id": "b75cb698",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,6 +318,8 @@
     "company = input('Enter company name: ')\n",
     "if name == Jaspreet and company == Cisco:\n",
     "    print(f' You're me!')\n",
+    "if name == Jaspreet and Company != Cisco:\n",
+    "          print('This Jaspreet is not from Cisco')\n",
     "        "
    ]
   }
