--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f260ca71",
+   "id": "11c3d2a3",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6c6f400e",
+   "id": "f215916e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0e77317d",
+   "id": "507e07aa",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "25d52a89",
+   "id": "588dd876",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d774dacd",
+   "id": "967250f4",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45b15692",
+   "id": "4846573d",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "379ec55f",
+   "id": "450bdced",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9617d2e1",
+   "id": "14deb8dc",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2666a1a0",
+   "id": "29297152",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1914afa8",
+   "id": "3a775829",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3847023c",
+   "id": "eefa19f6",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b291fe21",
+   "id": "9865bc9b",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d0545939",
+   "id": "020f7d78",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "de885b2c",
+   "id": "0b18151b",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6dd6d77e",
+   "id": "3266d659",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "71e5d577",
+   "id": "b52aa4c6",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "70aa46d9",
+   "id": "ee5ff81b",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2d328054",
+   "id": "a00b16a3",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "72aa72d8",
+   "id": "3483a6fd",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "5cd60435",
+   "id": "82edf870",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3325c08d",
+   "id": "abb9b422",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,8 +422,10 @@
     "company = input('What company do you work for? ')\n",
     "if name=='Sara'or name=='sara':\n",
     "    print('Hi, Sara')\n",
-    "elif company=='Cisco'or name=='cisco': \n",
-    "    print('Hi, we are collegue!')\n",
+    "elif name ! 'Sara'\n",
+    "\n",
+    "elif company=='Cisco'or company=='cisco': \n",
+    "    print('Hi, we are collegues!')\n",
     "else:\n",
     "    print('Oh, you?!')"
    ]
@@ -431,7 +433,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6102cd8",
+   "id": "8e46e092",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f810dbb",
    "metadata": {},
    "outputs": [],
    "source": []
