--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9252898c",
+   "id": "06aa2b5c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ac87250c",
+   "id": "e0e3eee2",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "606ce9bc",
+   "id": "7bd0fa66",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f0e75bf1",
+   "id": "0b88fc0b",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b968b63a",
+   "id": "58e74418",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86d88f7e",
+   "id": "a7222f13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,9 @@
     "if name== ahmed and company== cisco :\n",
     "    print('you're me!)\n",
     "elif name == ahmed and company=! cisco:\n",
-    "    print ('duplicate words, check again')\n",
+    "    print ('Hey there')\n",
+    "elif name=! ahmed and company== cisco:\n",
+    "    print (' Hello Colleague')\n",
     "else: \n",
     "    print (f'{name1} comes first')"
    ]
