--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -121,14 +121,16 @@
     "    print('You are me!')\n",
     "elif name == Dima and company != cisco:\n",
     "    print(f'Hello {name} from {company}')\n",
-    "elif name != Dima and company != cisco\n",
-    "    print()"
+    "elif name != Dima and company == cisco:\n",
+    "    print(f'HEllo {name} we are colleagues!')\n",
+    "else:\n",
+    "    print (f'Helo {name} from {company}! nice to mmet you')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "621a4c2c",
+   "id": "76820a46",
    "metadata": {},
    "outputs": [],
    "source": []
