--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a5582f2",
+   "id": "cf00e3cb",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "03be5516",
+   "id": "4591503a",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6fb5e259",
+   "id": "bbf0592c",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6dd7ef38",
+   "id": "54bef178",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "91dafdfa",
+   "id": "7351d959",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "b3db81f1",
+   "id": "f297b300",
    "metadata": {
     "scrolled": true
    },
@@ -190,16 +190,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "ca064bab",
+   "execution_count": 46,
+   "id": "d099ddd2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "expected ':' (2882288544.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[41], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    if company != 'Cisco'\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what is your name: Mark\n",
+      "Where do you work: Cisco\n",
+      "Hello there! Cisco system it is !\n"
      ]
     }
    ],
@@ -210,18 +211,19 @@
     "    print('You are me!')\n",
     "elif name == 'Asma':\n",
     "    if company != 'Cisco':\n",
-    "    print('Nice name!')\n",
+    "        print('Nice name!')\n",
     "elif company == 'Cisco':\n",
     "    if name != 'Asma':\n",
-    "        print('Hello there!')\n",
-    "    else:\n",
+    "        print('Hello there! Cisco system it is !')\n",
+    "else:\n",
+    "    print('not a match!')\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68f69744",
+   "id": "b93065cf",
    "metadata": {},
    "outputs": [],
    "source": []
