--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a421f955",
+   "id": "c8e1a990",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e890c262",
+   "id": "bbe997b1",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e14c676",
+   "id": "63b3e8d0",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d2dad9b",
+   "id": "f102a646",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "06fc021e",
+   "id": "937ea324",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "539c274f",
+   "id": "9c017585",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9d04aa80",
+   "id": "89325d84",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "56dd3244",
+   "id": "96e25454",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1484caa4",
+   "id": "d26c0835",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d23f3f7f",
+   "id": "7c837f6d",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "319ba016",
+   "id": "cbb3575e",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5adc63c3",
+   "id": "06e691d3",
    "metadata": {},
    "outputs": [
     {
@@ -247,8 +247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "0ff6f103",
+   "execution_count": 37,
+   "id": "7e788644",
    "metadata": {},
    "outputs": [
     {
@@ -256,8 +256,8 @@
      "output_type": "stream",
      "text": [
       "Enter your nameMatt\n",
-      "Enter your comany nameCisco\n",
-      "You're me!\n"
+      "Enter your comany namedawda\n",
+      "What a nice name\n"
      ]
     }
    ],
@@ -269,14 +269,16 @@
     "\n",
     "if name==myn and com==myc:\n",
     "    print('You\\'re me!')\n",
-    "elif name=myn:\n",
-    "    print('What a nice name')\n"
+    "elif name==myn:\n",
+    "    print('What a nice name!')\n",
+    "elif name!=myn and com==myc:\n",
+    "    print(f'Hello {name}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b876870",
+   "id": "648c93bb",
    "metadata": {},
    "outputs": [],
    "source": []
