--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0f5f6777",
+   "id": "085ed137",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4dd02235",
+   "id": "ddecdf1d",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8f9c3fe1",
+   "id": "203d4afe",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1553df8",
+   "id": "71a7b89e",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fba55c46",
+   "id": "992b2d37",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b72ec01d",
+   "id": "f7d40dbc",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "da648665",
+   "id": "2683cfd3",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88d33f58",
+   "id": "b22fb6e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,14 +149,18 @@
     "    print(\"you haven't provided your company !!\")\n",
     "elif name == 'Przem' and company == 'Cisco' :\n",
     "    print(\"you claim to be me :)  !!\")\n",
-    "elif name == 'Przem' and company != 'Cisco' :    # to and jest chyba niepotrzebne\n",
-    "    print(f\"Welcome {n} !!\")"
+    "elif name == 'Przem' : # and company != 'Cisco' :    # to and jest chyba niepotrzebne\n",
+    "    print(f\"Welcome another {name} from company {company} !!\")\n",
+    "elif company == 'Cisco' :\n",
+    "    print(f\"Welcome mate{name} from company {company} !!\")\n",
+    "else\n",
+    "    print(f\"Welcome another {name} from company {company} !!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab50cdd2",
+   "id": "6ced5cd5",
    "metadata": {},
    "outputs": [],
    "source": []
