--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aaea2a95",
+   "id": "1cb29802",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ef81302c",
+   "id": "d22b4d4f",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2f1495f5",
+   "id": "ca4e99e2",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cf0dbcc5",
+   "id": "4ee8bf81",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "940cb9d1",
+   "id": "e3a831af",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cb6939fd",
+   "id": "dc89fd58",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "61e27cd2",
+   "id": "4ee71667",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "24e5b3c9",
+   "id": "afe79231",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9716a6e",
+   "id": "975bc3a4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,32 +186,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d0b35fd",
+   "id": "4998ee72",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "1f99ee83",
+   "execution_count": 37,
+   "id": "52367bde",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter a name: Joe\n",
-      "Please enter your company: Cisco\n",
-      "Hey it's me!\n"
+      "Please enter a name: joe\n",
+      "Please enter your company: cisco\n",
+      "You aint cool\n"
      ]
     }
    ],
    "source": [
     "name = input(\"Please enter a name: \")\n",
     "company = input(\"Please enter your company: \")\n",
-    "namecheck= \n",
-    "if name == \"Joe\" and company == \"Cisco\":\n",
+    "if name.lower() == \"joe\" and company == \"Cisco\":\n",
     "    print(\"Hey it's me!\")\n",
     "elif name == \"Joe\" and company != \"Cisco\":\n",
     "    print(\"Nice name!\")\n",
@@ -224,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ab06af2",
+   "id": "7a3a0f94",
    "metadata": {},
    "outputs": [],
    "source": []
