--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "06d50ecd",
+   "id": "ff974425",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1bb282b8",
+   "id": "d5bf7714",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "02d349d9",
+   "id": "3518a195",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "92dd69dc",
+   "id": "08bd1b41",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d7aa6d7c",
+   "id": "0feb61cf",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ecd32e3b",
+   "id": "5bca6a76",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "26f7ec1e",
+   "id": "b6964750",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "cfe69563",
+   "id": "0af72220",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "4eb7b3bd",
+   "id": "26746c69",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "98ee6086",
+   "id": "5c11d8af",
    "metadata": {},
    "outputs": [
     {
@@ -229,16 +229,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "93ae1066",
+   "execution_count": 54,
+   "id": "28090366",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3539856187.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[48], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    if name == \"Fatos\" and company= \"Cisco\":\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Jim\n",
+      "Enter the name of the Company: Apple\n",
+      "Get out of the building Jim\n"
      ]
     }
    ],
@@ -246,21 +247,21 @@
     "name= input(\"Enter your name: \")\n",
     "company= input(\"Enter the name of the Company: \")\n",
     "\n",
-    "if name == \"Fatos\" and company= \"Cisco\":\n",
+    "if name == \"Fatos\" and company== \"Cisco\":\n",
     "    print(\"you are me\")\n",
     "elif name== \"Fatos\" or company== \"Cisco\":\n",
     "    if name==\"Fatos\":\n",
     "        print(\"you have a nice name\")\n",
-    "    else\n",
+    "    else:\n",
     "        print(f\"Hi {name}, have a nice day\")\n",
-    "else\n",
+    "else:\n",
     "    print(f\"Get out of the building {name}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59a8dd33",
+   "id": "0855d166",
    "metadata": {},
    "outputs": [],
    "source": []
