--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b75cb698",
+   "id": "fa69858b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,9 @@
     "    print(f' You're me!')\n",
     "if name == Jaspreet and Company != Cisco:\n",
     "          print('This Jaspreet is not from Cisco')\n",
-    "        "
+    "if name != Jaspreet and Company == Cisco:\n",
+    "          print('Greetings {name}!')\n",
+    "          \n"
    ]
   }
  ],
