--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "11c3d2a3",
+   "id": "b5f3066b",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f215916e",
+   "id": "42175f4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "507e07aa",
+   "id": "a107ea68",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "588dd876",
+   "id": "2f084d3e",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "967250f4",
+   "id": "dc832a29",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4846573d",
+   "id": "654ea321",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "450bdced",
+   "id": "7cc0e4fc",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "14deb8dc",
+   "id": "723f727f",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "29297152",
+   "id": "f81ac8be",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3a775829",
+   "id": "579d5cff",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "eefa19f6",
+   "id": "5dfd4a8a",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9865bc9b",
+   "id": "bcf374a1",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "020f7d78",
+   "id": "5eb973ad",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0b18151b",
+   "id": "7329a480",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3266d659",
+   "id": "b6114ab3",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b52aa4c6",
+   "id": "94a8ae58",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ee5ff81b",
+   "id": "1b843e92",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a00b16a3",
+   "id": "4a337e17",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3483a6fd",
+   "id": "374bb2ae",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "82edf870",
+   "id": "c5078d46",
    "metadata": {},
    "outputs": [
     {
@@ -414,16 +414,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abb9b422",
+   "id": "59676ffa",
    "metadata": {},
    "outputs": [],
    "source": [
     "name = input('What is your name? ')\n",
     "company = input('What company do you work for? ')\n",
-    "if name=='Sara'or name=='sara':\n",
-    "    print('Hi, Sara')\n",
-    "elif name ! 'Sara'\n",
-    "\n",
+    "if (name=='Sara'or name=='sara'\n",
+    "    and company=='Cisco'or company=='cisco'):\n",
+    "    print('That is me!)\n",
+    "elif name=='Sara'or name=='sara'\n",
+    "and (company=='Cisco'or company=='cisco')\n",
+    "    print ('Hi, Sara!)\n",
     "elif company=='Cisco'or company=='cisco': \n",
     "    print('Hi, we are collegues!')\n",
     "else:\n",
@@ -433,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e46e092",
+   "id": "8b81d95d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -441,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f810dbb",
+   "id": "5e0dbedc",
    "metadata": {},
    "outputs": [],
    "source": []
