--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "06aa2b5c",
+   "id": "5446f0f4",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e0e3eee2",
+   "id": "aca23829",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7bd0fa66",
+   "id": "f1164794",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0b88fc0b",
+   "id": "84d253a8",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "58e74418",
+   "id": "6dc7c41f",
    "metadata": {},
    "outputs": [
     {
@@ -111,22 +111,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a7222f13",
+   "execution_count": 32,
+   "id": "16222792",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3026663359.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[32], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    elif name == ahmed and company=get_ipython().getoutput(' cisco:')\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "name= input ('Enter a name: ')\n",
     "Company= input ('Enter a company name: ')\n",
     "if name== ahmed and company== cisco :\n",
-    "    print('you're me!)\n",
+    "    print('you are me')\n",
     "elif name == ahmed and company=! cisco:\n",
     "    print ('Hey there')\n",
     "elif name=! ahmed and company== cisco:\n",
     "    print (' Hello Colleague')\n",
     "else: \n",
-    "    print (f'{name1} comes first')"
+    "    print ('Hello, who are you')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dafe4f04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
