--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -109,28 +109,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "62a90e07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Bob\n",
+      "Enter your company: HP\n",
+      "Helo Bob from HP! nice to mmet you\n"
+     ]
+    }
+   ],
    "source": [
     "# test of the \"if\" functionality\n",
     "name = input('Enter your name: ')\n",
     "company = input('Enter your company: ')\n",
-    "if name == Dima and company == cisco:\n",
+    "if name == 'Dima' and company == 'cisco':\n",
     "    print('You are me!')\n",
-    "elif name == Dima and company != cisco:\n",
+    "elif name == 'Dima' and company != 'cisco':\n",
     "    print(f'Hello {name} from {company}')\n",
-    "elif name != Dima and company == cisco:\n",
+    "elif name != 'Dima' and company == 'cisco':\n",
     "    print(f'HEllo {name} we are colleagues!')\n",
     "else:\n",
-    "    print (f'Helo {name} from {company}! nice to mmet you')"
+    "    print (f'Helo {name} from {company}! nice to meet you')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76820a46",
+   "id": "444eff94",
    "metadata": {},
    "outputs": [],
    "source": []
