--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf00e3cb",
+   "id": "45e29dc5",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4591503a",
+   "id": "dc0459a6",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bbf0592c",
+   "id": "908f5595",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "54bef178",
+   "id": "0c9e9a2c",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "7351d959",
+   "id": "b576b661",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "f297b300",
+   "id": "20404148",
    "metadata": {
     "scrolled": true
    },
@@ -190,17 +190,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "d099ddd2",
+   "execution_count": 48,
+   "id": "ca55b425",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "what is your name: Mark\n",
-      "Where do you work: Cisco\n",
-      "Hello there! Cisco system it is !\n"
+      "what is your name: xyz\n",
+      "Where do you work: estarta\n",
+      "not a match! sorry.\n"
      ]
     }
    ],
@@ -216,14 +216,14 @@
     "    if name != 'Asma':\n",
     "        print('Hello there! Cisco system it is !')\n",
     "else:\n",
-    "    print('not a match!')\n",
+    "    print('not a match! sorry.')\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b93065cf",
+   "id": "3ea9047d",
    "metadata": {},
    "outputs": [],
    "source": []
