--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "085ed137",
+   "id": "3df2154c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ddecdf1d",
+   "id": "b5a51686",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "203d4afe",
+   "id": "827ee1ea",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71a7b89e",
+   "id": "eb0304ea",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "992b2d37",
+   "id": "843df6b8",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f7d40dbc",
+   "id": "ce2eecc8",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2683cfd3",
+   "id": "b08b59c6",
    "metadata": {},
    "outputs": [
     {
@@ -136,31 +136,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b22fb6e8",
+   "execution_count": 28,
+   "id": "c5331a74",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name : \n",
+      "Enter your company : csf\n",
+      "you haven't provided your name !!\n"
+     ]
+    }
+   ],
    "source": [
     "name = input('Enter your name : ')\n",
     "company = input('Enter your company : ')\n",
     "if name == '' :\n",
     "    print(\"you haven't provided your name !!\")\n",
-    "elif copmany == '' :\n",
+    "elif company == '' :\n",
     "    print(\"you haven't provided your company !!\")\n",
     "elif name == 'Przem' and company == 'Cisco' :\n",
     "    print(\"you claim to be me :)  !!\")\n",
     "elif name == 'Przem' : # and company != 'Cisco' :    # to and jest chyba niepotrzebne\n",
     "    print(f\"Welcome another {name} from company {company} !!\")\n",
     "elif company == 'Cisco' :\n",
-    "    print(f\"Welcome mate{name} from company {company} !!\")\n",
-    "else\n",
-    "    print(f\"Welcome another {name} from company {company} !!\")"
+    "    print(f\"Welcome mate {name} from my company {company} !!\")\n",
+    "else :\n",
+    "    print(f\"Welcome fiend {name} from company {company} !!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ced5cd5",
+   "id": "d0fd37a6",
    "metadata": {},
    "outputs": [],
    "source": []
