--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1cb29802",
+   "id": "d6e73108",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d22b4d4f",
+   "id": "488d6661",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ca4e99e2",
+   "id": "edd4ef64",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4ee8bf81",
+   "id": "d04faa8b",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e3a831af",
+   "id": "42734cbd",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dc89fd58",
+   "id": "2b593ddc",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4ee71667",
+   "id": "8b967ec7",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "afe79231",
+   "id": "ac411555",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "975bc3a4",
+   "id": "898657b8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,44 +186,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4998ee72",
+   "id": "260828f2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "52367bde",
+   "execution_count": 42,
+   "id": "cfbaeb13",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter a name: joe\n",
-      "Please enter your company: cisco\n",
-      "You aint cool\n"
+      "Please enter a name: Bob\n",
+      "Please enter your company: Microsoft\n",
+      "You aint from around here fella\n"
      ]
     }
    ],
    "source": [
     "name = input(\"Please enter a name: \")\n",
     "company = input(\"Please enter your company: \")\n",
-    "if name.lower() == \"joe\" and company == \"Cisco\":\n",
+    "if name.lower() == \"joe\" and company.lower() == \"cisco\":\n",
     "    print(\"Hey it's me!\")\n",
-    "elif name == \"Joe\" and company != \"Cisco\":\n",
+    "elif name.lower() == \"joe\" and company.lower() != \"cisco\":\n",
     "    print(\"Nice name!\")\n",
-    "elif name !=\"Joe\" and company ==\"Cisco\":\n",
-    "    print(\"Hey colleague!\")\n",
+    "elif name.lower() !=\"joe\" and company.lower() ==\"cisco\":\n",
+    "    print(\"Hey fellow colleague!\")\n",
     "else:\n",
-    "    print(\"You aint cool\")"
+    "    print(\"...You aint from around here fella\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a3a0f94",
+   "id": "db32e3a3",
    "metadata": {},
    "outputs": [],
    "source": []
