--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c8e1a990",
+   "id": "eda7e7b2",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bbe997b1",
+   "id": "da5dba5a",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63b3e8d0",
+   "id": "b9a63fbe",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f102a646",
+   "id": "1c935aaf",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "937ea324",
+   "id": "a5967c11",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9c017585",
+   "id": "22d46579",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "89325d84",
+   "id": "5f7762f1",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "96e25454",
+   "id": "07815c9a",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d26c0835",
+   "id": "9cf90670",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "7c837f6d",
+   "id": "ade85df8",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "cbb3575e",
+   "id": "4ab56bdb",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "06e691d3",
+   "id": "9ace570d",
    "metadata": {},
    "outputs": [
     {
@@ -247,17 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "7e788644",
+   "execution_count": 40,
+   "id": "a47d576f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your nameMatt\n",
-      "Enter your comany namedawda\n",
-      "What a nice name\n"
+      "Enter your nameadwda\n",
+      "Enter your comany namedaw\n"
      ]
     }
    ],
@@ -272,13 +271,15 @@
     "elif name==myn:\n",
     "    print('What a nice name!')\n",
     "elif name!=myn and com==myc:\n",
-    "    print(f'Hello {name}')"
+    "    print(f'Hello {name}!')\n",
+    "elif name!=myn and com!=myc:\n",
+    "    print('')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "648c93bb",
+   "id": "9b4199cb",
    "metadata": {},
    "outputs": [],
    "source": []
