--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b5f3066b",
+   "id": "fa3d1598",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "42175f4d",
+   "id": "78c560dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a107ea68",
+   "id": "6c124495",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2f084d3e",
+   "id": "b8adc5dc",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dc832a29",
+   "id": "3d73f56f",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "654ea321",
+   "id": "331e6152",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7cc0e4fc",
+   "id": "6843c6d6",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "723f727f",
+   "id": "598a3526",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f81ac8be",
+   "id": "08edf36c",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "579d5cff",
+   "id": "af4eecab",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5dfd4a8a",
+   "id": "f0622339",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bcf374a1",
+   "id": "1491c162",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5eb973ad",
+   "id": "65072d01",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7329a480",
+   "id": "57825321",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b6114ab3",
+   "id": "b93310a1",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "94a8ae58",
+   "id": "60c65bc8",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1b843e92",
+   "id": "136ba56a",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4a337e17",
+   "id": "938d1df9",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "374bb2ae",
+   "id": "8a413eae",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c5078d46",
+   "id": "3f1da3c8",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59676ffa",
+   "id": "f0a21641",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,9 +423,9 @@
     "if (name=='Sara'or name=='sara'\n",
     "    and company=='Cisco'or company=='cisco'):\n",
     "    print('That is me!)\n",
-    "elif name=='Sara'or name=='sara'\n",
-    "and (company=='Cisco'or company=='cisco')\n",
-    "    print ('Hi, Sara!)\n",
+    "elif (name=='Sara'or name=='sara'\n",
+    "    and company!'Cisco'or company!'cisco'):\n",
+    "    print ('Hi, Sara!')\n",
     "elif company=='Cisco'or company=='cisco': \n",
     "    print('Hi, we are collegues!')\n",
     "else:\n",
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b81d95d",
+   "id": "f951e1fb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e0dbedc",
+   "id": "84ec4183",
    "metadata": {},
    "outputs": [],
    "source": []
