--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa69858b",
+   "id": "b61f7ce2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,6 +322,8 @@
     "          print('This Jaspreet is not from Cisco')\n",
     "if name != Jaspreet and Company == Cisco:\n",
     "          print('Greetings {name}!')\n",
+    "if name ! Jaspreet and Company != Cisco:\n",
+    "          print(f'{name} from {company})\n",
     "          \n"
    ]
   }
