--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "62a90e07",
    "metadata": {},
    "outputs": [
@@ -117,9 +117,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name: Bob\n",
-      "Enter your company: HP\n",
-      "Helo Bob from HP! nice to mmet you\n"
+      "Enter your name: Dima\n",
+      "Enter your company: cisco\n",
+      "You are me!\n"
      ]
     }
    ],
@@ -134,13 +134,13 @@
     "elif name != 'Dima' and company == 'cisco':\n",
     "    print(f'HEllo {name} we are colleagues!')\n",
     "else:\n",
-    "    print (f'Helo {name} from {company}! nice to meet you')"
+    "    print(f'Helo {name} from {company}! nice to meet you')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "444eff94",
+   "id": "08312007",
    "metadata": {},
    "outputs": [],
    "source": []
