--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eda7e7b2",
+   "id": "d0141b00",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "da5dba5a",
+   "id": "7bc1970f",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9a63fbe",
+   "id": "be31770f",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c935aaf",
+   "id": "2316df0a",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a5967c11",
+   "id": "2eb5e6a7",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "22d46579",
+   "id": "933ab7ad",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5f7762f1",
+   "id": "06690b33",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "07815c9a",
+   "id": "031909cd",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9cf90670",
+   "id": "8f9f81d4",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ade85df8",
+   "id": "86d7e89f",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4ab56bdb",
+   "id": "6b2d72db",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "9ace570d",
+   "id": "5504f92f",
    "metadata": {},
    "outputs": [
     {
@@ -247,16 +247,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "a47d576f",
+   "execution_count": 44,
+   "id": "3cad6314",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your nameadwda\n",
-      "Enter your comany namedaw\n"
+      "Enter your nameasd\n",
+      "Enter your comany namedas\n",
+      "Hi\n"
      ]
     }
    ],
@@ -273,13 +274,13 @@
     "elif name!=myn and com==myc:\n",
     "    print(f'Hello {name}!')\n",
     "elif name!=myn and com!=myc:\n",
-    "    print('')"
+    "    print('Hi')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b4199cb",
+   "id": "04ba5aa6",
    "metadata": {},
    "outputs": [],
    "source": []
